<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_250sdp"
    android:layout_height="@dimen/_250sdp"
    android:background="@color/backgroung"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/_8sdp"
        android:text="@string/general_comments"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/_14ssp"/>

    <TextView
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        android:layout_marginBottom="@dimen/_8sdp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        android:id="@+id/line"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@id/submit"
        android:layout_marginBottom="@dimen/_8sdp"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/general_comments_et"
        app:layout_constraintTop_toBottomOf="@id/heading"
        android:background="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/line"
        android:layout_margin="@dimen/_8sdp"
        android:hint="@string/enter_your_comments_here"
        android:gravity="top"
        android:textSize="@dimen/_13ssp"
        android:focusableInTouchMode="true"/>

</android.support.constraint.ConstraintLayout>